--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 Scratch = "6c6a2e73-6563-6170-7368-637461726353"
 
 [compat]
+Pluto = "0.19"
 julia = "1"
 
 [extras]
