--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,6 @@ authors = ["Josh Day <emailjoshday@gmail.com> and contributors"]
 version = "0.1.0"
 
 [deps]
-DimensionalData = "0703355e-b756-11e9-17c0-8b28908087d0"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
@@ -15,15 +14,16 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
 GLMakie = "0.10"
-JSON3 = "1.14"
+JSON3 = "1"
 Observables = "0.5"
 OrderedCollections = "1.6"
 Rasters = "0.11"
 julia = "1.10"
 
 [extras]
+GeoJSON = "61d90e0f-e114-555e-ac52-39dfb47a3ef9"
 RasterDataSources = "3cb90ccd-e1b6-4867-9617-4276c8b2ca36"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "RasterDataSources"]
+test = ["Test", "RasterDataSources", "GeoJSON"]
