--- a/Project.toml
+++ b/Project.toml
@@ -4,16 +4,26 @@ authors = ["Josh Day <emailjoshday@gmail.com> and contributors"]
 version = "0.1.0"
 
 [deps]
-Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
-Scratch = "6c6a2e73-6563-6170-7368-637461726353"
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
+Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
+Observables = "510215fc-4207-5dde-b226-833fc4488ee2"
+OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
+Rasters = "a3a2b9e3-a471-40c9-b274-f788e487c689"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
-julia = "1"
-Scratch = "1.1"
-Pluto = "0.19"
+GLMakie = "0.10"
+JSON3 = "1"
+Observables = "0.5"
+OrderedCollections = "1.6"
+Rasters = "0.11"
+julia = "1.10"
 
 [extras]
+GeoJSON = "61d90e0f-e114-555e-ac52-39dfb47a3ef9"
+RasterDataSources = "3cb90ccd-e1b6-4867-9617-4276c8b2ca36"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["Test", "RasterDataSources", "GeoJSON"]
