--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -39,7 +39,7 @@ jobs:
       - uses: julia-actions/julia-buildpkg@v1
       - name: Run the tests
         id: referencetests
-        continue-on-error: true
+        continue-on-error: false
         run: >
           DISPLAY=:0 xvfb-run -s '-screen 0 1024x768x24' julia --color=yes --project=. -e 'ENV["RASTERDATASOURCES_PATH"] = "raster_data/"; using Pkg; Pkg.test("InteractiveGeospatial", coverage=true)'
           && echo "TESTS_SUCCESSFUL=true" >> $GITHUB_ENV
