--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -40,8 +40,10 @@ jobs:
       - name: Run the tests
         id: referencetests
         continue-on-error: false
+        env:
+          RASTERDATASOURCES_PATH: "./raster_data"
         run: >
-          DISPLAY=:0 xvfb-run -s '-screen 0 1024x768x24' julia --color=yes --project=. -e 'ENV["RASTERDATASOURCES_PATH"] = "raster_data/"; using Pkg; Pkg.test("InteractiveGeospatial", coverage=true)'
+          DISPLAY=:0 xvfb-run -s '-screen 0 1024x768x24' julia --color=yes --project=. -e 'using Pkg; Pkg.test("InteractiveGeospatial", coverage=true)'
           && echo "TESTS_SUCCESSFUL=true" >> $GITHUB_ENV
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v1
