--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,7 +18,6 @@ jobs:
           - ubuntu-latest
         arch:
           - x64
-          - x86
     steps:
       - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@v2
@@ -37,11 +36,10 @@ jobs:
             ${{ runner.os }}-test-
             ${{ runner.os }}-
       - uses: julia-actions/julia-buildpkg@v1
-      - name: Run the tests
-        id: referencetests
+      - name: Run Tests
         continue-on-error: false
         env:
-          RASTERDATASOURCES_PATH: "./raster_data"
+          RASTERDATASOURCES_PATH: "."
         run: >
           DISPLAY=:0 xvfb-run -s '-screen 0 1024x768x24' julia --color=yes --project=. -e 'using Pkg; Pkg.test("InteractiveGeospatial", coverage=true)'
           && echo "TESTS_SUCCESSFUL=true" >> $GITHUB_ENV
